corpus/c/macro_include/case-13/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.c:9:12: error: [missing_name] ‘Box’ has no member named ‘missing_field’
name: Box
use : return READ_MISSING(box);
| src/main.c:9:12
|     return READ_MISSING(box);
|            ^